feat: key attestation impl
