# src/main/java/se/digg/wallet/gateway/domain/model/walletprovider/KeyAttestation.java
@@ -1,0 +1,16 @@
+// SPDX-FileCopyrightText: 2026 Digg - Agency for Digital Government
+//
+// SPDX-License-Identifier: EUPL-1.2
+
+package se.digg.wallet.gateway.domain.model.walletprovider;
+
+import io.soabase.recordbuilder.core.RecordBuilder;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+@RecordBuilder
+public record KeyAttestation(
+    @Schema(
+        description = "Wallet unit attestation",
+        example = "ey5359ddf330...",
+        requiredMode = Schema.RequiredMode.REQUIRED) String jwt) {
+}
